--- a/package.json
+++ b/package.json
@@ -1,15 +1,37 @@
 {
-  "name": "cra-a3",
+  "name": "cra-init",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.4.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
+    "moment": "^2.29.1",
+    "node-sass": "^7.0.1",
+    "polished": "^4.1.4",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-imask": "^6.4.2",
+    "react-modal": "^3.14.4",
+    "react-responsive": "^9.0.0-beta.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.0"
+    "react-select": "^5.2.2",
+    "react-toastify": "^8.1.1",
+    "recharts": "^2.1.8",
+    "styled-components": "^5.3.3",
+    "styled-icons": "^10.45.0",
+    "sweetalert2": "^11.4.0",
+    "sweetalert2-react-content": "^4.2.0",
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
